[gd_scene load_steps=6 format=3 uid="uid://ciyy0xxjwf4tv"]

[ext_resource type="Script" uid="uid://c8n2h01dc8bvy" path="res://script/akashic_tcg_room.gd" id="1_tgc_room"]
[ext_resource type="PackedScene" path="res://scene/room_chat.tscn" id="2_room_chat"]
[ext_resource type="Texture2D" uid="uid://omsodhklnrt1" path="res://asset/background/Akashic room background.png" id="3_hu3fe"]

[sub_resource type="StyleBoxFlat" id="2_btn_hover"]
bg_color = Color(0.494089, 0, 0.00481471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.494118, 0, 0.00392157, 1)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="1_btn_normal"]
bg_color = Color(0.494118, 0, 0.00392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="room2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tgc_room")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -9.0
offset_right = -11.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hu3fe")
expand_mode = 1

[node name="RoomHeader" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -250.0
offset_right = 250.0
offset_bottom = 40.0
alignment = 1

[node name="RoomIDLabel" type="Label" parent="RoomHeader"]
layout_mode = 2
text = "ROOM: #12345"
horizontal_alignment = 1

[node name="RoomStateLabel" type="Label" parent="RoomHeader"]
layout_mode = 2
text = "WAITING"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
offset_left = -500.0
offset_top = -100.0
offset_right = 500.0
offset_bottom = 200.0
alignment = 1

[node name="HostCard" type="Panel" parent="CardsContainer"]
modulate = Color(0.00345016, 0.158111, 0.258427, 0.8)
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Username" type="Label" parent="CardsContainer/HostCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -100.0
offset_right = 100.0
offset_bottom = 40.0
text = "..."
horizontal_alignment = 1

[node name="Level" type="Label" parent="CardsContainer/HostCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.18
anchor_right = 0.5
anchor_bottom = 0.18
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
text = "..."
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CardsContainer/HostCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
offset_left = -60.0
offset_right = 60.0
offset_bottom = 30.0
text = "READY"
horizontal_alignment = 1

[node name="VSLabel" type="Label" parent="CardsContainer"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClientCard" type="Panel" parent="CardsContainer"]
modulate = Color(0.4674, 3.08037e-06, 0.303094, 1)
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Username" type="Label" parent="CardsContainer/ClientCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -100.0
offset_right = 100.0
offset_bottom = 40.0
text = "."
horizontal_alignment = 1

[node name="Level" type="Label" parent="CardsContainer/ClientCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.18
anchor_right = 0.5
anchor_bottom = 0.18
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
text = "."
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CardsContainer/ClientCard"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
offset_left = -60.0
offset_right = 60.0
offset_bottom = 30.0
text = "Searching.."
horizontal_alignment = 1

[node name="ButtonPanel" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
offset_left = -260.0
offset_right = 260.0
offset_bottom = 50.0
theme_override_constants/separation = 25
alignment = 1

[node name="StartButton" type="Button" parent="ButtonPanel"]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"PrimaryButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("2_btn_hover")
theme_override_styles/hover = SubResource("2_btn_hover")
theme_override_styles/pressed = SubResource("2_btn_hover")
theme_override_styles/normal = SubResource("1_btn_normal")
text = "START MATCH"

[node name="LeaveButton" type="Button" parent="ButtonPanel"]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"DangerButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("2_btn_hover")
theme_override_styles/hover = SubResource("2_btn_hover")
theme_override_styles/pressed = SubResource("2_btn_hover")
theme_override_styles/normal = SubResource("1_btn_normal")
text = "LEAVE ROOM"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.93
anchor_right = 0.5
anchor_bottom = 0.93
offset_left = -200.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 45.0
text = "Waiting for player to join..."
horizontal_alignment = 1

[node name="RoomChat" parent="." instance=ExtResource("2_room_chat")]
layout_mode = 0
offset_left = 20.0
offset_top = 430.0
offset_right = 254.0
offset_bottom = 621.0
